(library
  (name doculib_gui)
  (libraries
    lablgtk3
    lwt
    yojson
    cohttp
    cohttp-lwt-unix
    str
    agrep)
  (modules
    Icons Font Gui Doc Db Search Json Model Notebook Utilities Update_db)
  )

(env
  (dev
    (flags
		:standard -w
	  	-3-6-7-10-24-26-27-32-33-35
    	-no-strict-sequence)))