(library
  (name doculib_gui)
  (libraries
    lablgtk3
    lwt
    cohttp
    cohttp-lwt-unix
    str
    agrep
    metadb)
  (modules
    icons
    font
    gui
    doc
    db
    search
    model
    notebook
    library
    log
    listutil
    update_db
  )
)

(env
  (dev
    (flags
		:standard -w
	  	-3-6-7-10-24-26-27-32-33-35
    	-no-strict-sequence)))
